--- a/delivery/delivery/templates/stores.html
+++ b/delivery/delivery/templates/stores.html
@@ -29,10 +29,14 @@
         {{store.csrf_token}}
 
         <div class="form-group">
+            <label>Selecione um Usuario</label>
+            {{store.user_id(class="form-control")}}
+        </div>
+
+        <div class="form-group">
             <label>Selecione uma Categoria</label>
             {{store.category_id(class="form-control")}}
         </div>
-
         <div class="form-group">
             <label>Nome </label>
             {{ store.name_store(class="form-control", placeholder="Nome do Estabelecimento") }}
@@ -47,21 +51,7 @@
             {% endif %}
         </div>
 
-        <div class="form-group">
-            <div class="checkbox">
-                <label>Disponível </label>
-                {{ store.active(class="checkbox", type="checkbox") }}
-                {% if store.errors.available %}
-                <div class="alert alert-danger" role="alert">
-                    <ul>
-                        {% for e in store.errors.available %}
-                        <li>{{ e }}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                {% endif %}
-            </div>
-        </div>
+
 
 
         <div class="control">
