--- a/delivery/delivery/templates/base.html
+++ b/delivery/delivery/templates/base.html
@@ -85,6 +85,9 @@
             <a class="navbar-item" href="{{ url_for('cate.register_address') }}">
               Endereço
             </a>
+            <a class="navbar-item" href="{{ url_for('cate.register_order') }}">
+              Compra
+            </a>
             <a class="navbar-item" href="{{ url_for('cate.register_order_items') }}">
               Ordem de Itens
             </a>
