--- a/delivery/delivery/templates/items.html
+++ b/delivery/delivery/templates/items.html
@@ -52,7 +52,7 @@
             <figure class="thumb col-md-4">
                 <figcaption>
                     <label class="fileContainer">
-                        {{item.image(class="btn btn-link")}}
+                        {{item.imagem(class="btn btn-link")}}
                     </label>
                 </figcaption>
             </figure>
