--- a/delivery/delivery/templates/category/register_category.html
+++ b/delivery/delivery/templates/category/register_category.html
@@ -16,16 +16,6 @@
 <form action='{{url_for("cate.register_category")}}' method='post' enctype='multipart/cate-data'>
 <div class="col-md-3 col-md-offset-4">
     
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-    <ul class="flashes">
-      {% for category, message in messages %}
-      <li class="alert alert-{{category}}">{{ message }}</li>
-      {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
-
     {{cate.csrf_token}}
 
     <div class="form-group">
@@ -36,6 +26,20 @@
             <ul>
                 {% for e in cate.errors.password %}
                     <li>{{ e }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
+    </div>
+
+    <div class="form-group">
+        <label>No menu</label>
+        {{ cate.on_menu(class="checkbox", type="checkbox") }}
+        {% if cate.errors.available %}
+        <div class="alert alert-danger" role="alert">
+            <ul>
+                {% for e in cate.errors.available %}
+                <li>{{ e }}</li>
                 {% endfor %}
             </ul>
         </div>
