--- a/delivery/delivery/templates/address/register_address.html
+++ b/delivery/delivery/templates/address/register_address.html
@@ -72,11 +72,8 @@
 
         <div class="control">
             <input class="button is-link" type="submit" value="Cadastrar">
-            <button class="button is-link is-light"><a href="{{ url_for('page.index')}}">Voltar</a></button>
+            <button class="button is-link is-light"><a href="{{ url_for('cate.list_address')}}">Voltar</a></button>
         </div>
-
-
-
     </div>
 </form>
 {% endblock %}
