--- a/delivery/delivery/templates/items/register_items.html
+++ b/delivery/delivery/templates/items/register_items.html
@@ -91,7 +91,7 @@
 
         <div class="control">
             <input class="button is-link" type="submit" value="Cadastrar">
-            <button class="button is-link is-light"><a href="{{ url_for('page.index')}}">Voltar</a></button>
+            <button class="button is-link is-light"><a href="{{ url_for('cate.list_items')}}">Voltar</a></button>
         </div>
 
 
