--- a/delivery/delivery/templates/order/register_order.html
+++ b/delivery/delivery/templates/order/register_order.html
@@ -48,7 +48,7 @@
 
         <div class="control">
             <input class="button is-link" type="submit" value="Cadastrar">
-            <button class="button is-link is-light"><a href="{{ url_for('page.index')}}">Voltar</a></button>
+            <button class="button is-link is-light"><a href="{{ url_for('cate.list_order')}}">Voltar</a></button>
         </div>
 
 
