--- a/delivery/delivery/templates/store/register_store.html
+++ b/delivery/delivery/templates/store/register_store.html
@@ -53,7 +53,7 @@
 
         <div class="control">
             <input class="button is-link" type="submit" value="Cadastrar">
-            <button class="button is-link is-light"><a href="{{ url_for('page.index')}}">Voltar</a></button>
+            <button class="button is-link is-light"><a href="{{ url_for('cate.list_order_items')}}">Voltar</a></button>
         </div>
 
 
