--- a/delivery/delivery/templates/base.html
+++ b/delivery/delivery/templates/base.html
@@ -80,7 +80,7 @@
               Loja
             </a>
             <a class="navbar-item" href="{{ url_for('cate.list_items') }}">
-              Itens
+              Item
             </a>
             <a class="navbar-item" href="{{ url_for('cate.list_address') }}">
               Endereço
