--- a/delivery/delivery/templates/order_items/list_order_items.html
+++ b/delivery/delivery/templates/order_items/list_order_items.html
@@ -40,6 +40,6 @@
 </table>
 
 
-<a class="btn btn-primary" href="{{ url_for('cate.register_order') }}">Nova Categoria</a>
+<a class="btn btn-primary" href="{{ url_for('cate.register_order_items') }}">Nova Categoria</a>
 {% endblock %}
 {% endblock %}
