--- a/delivery/delivery/templates/login/efectlogin.html
+++ b/delivery/delivery/templates/login/efectlogin.html
@@ -5,7 +5,7 @@
 <section class="hero is-primary">
 <div class="hero-body">
     <div class="container">
-        <h1>Cadastra-se no...</h1>
+        <h1>Faça seu login</h1>
     </div>
 </div>
 </section>
