--- a/delivery/delivery/templates/login/userform.html
+++ b/delivery/delivery/templates/login/userform.html
@@ -6,7 +6,7 @@
 <section class="hero is-primary">
     <div class="hero-body">
         <div class="container">
-            <h1>Cadastra-se no...</h1>
+            <h1>Cadastro de login</h1>
         </div>
     </div>
 </section>
