--- a/delivery/delivery/templates/store/register_store.html
+++ b/delivery/delivery/templates/store/register_store.html
@@ -13,23 +13,23 @@
 {% endblock %}
 
 {% block main %}
-<form action='{{url_for("cate.register_store")}}' method='post' enctype='multipart/cate-data'>
+<form action='{{url_for("cate.register_store")}}' method='post' enctype='multipart/form-data'>
     <div class="col-md-3 col-md-offset-4">
 
-        {{store.csrf_token}}
+        {{form.csrf_token}}
 
         <div class="form-group">
             <label>Selecione uma Categoria</label>
-            {{store.category_id(class="form-control")}}
+            {{form.category_id(class="form-control")}}
         </div>
 
         <div class="form-group">
             <label>Nome </label>
-            {{ store.name_store(class="form-control", placeholder="Nome do Estabelecimento") }}
-            {% if store.errors.name %}
+            {{ form.name_store(class="form-control", placeholder="Nome do Estabelecimento") }}
+            {% if form.errors.name %}
             <div class="alert alert-danger" role="alert">
                 <ul>
-                    {% for e in store.errors.name %}
+                    {% for e in form.errors.name %}
                     <li>{{ e }}</li>
                     {% endfor %}
                 </ul>
@@ -39,11 +39,11 @@
 
         <div class="form-group">
             <label>Ativo </label>
-            {{ store.active(class="checkbox", type="checkbox") }}
-            {% if store.errors.available %}
+            {{ form.active(class="checkbox", type="checkbox") }}
+            {% if form.errors.available %}
             <div class="alert alert-danger" role="alert">
                 <ul>
-                    {% for e in store.errors.available %}
+                    {% for e in form.errors.available %}
                     <li>{{ e }}</li>
                     {% endfor %}
                 </ul>
@@ -53,7 +53,7 @@
 
         <div class="control">
             <input class="button is-link" type="submit" value="Cadastrar">
-            <button class="button is-link is-light"><a href="{{ url_for('cate.list_order_items')}}">Voltar</a></button>
+            <button class="button is-link is-light"><a href="{{ url_for('cate.list_store')}}">Voltar</a></button>
         </div>
 
 
