Resolved issue from QuerySelectField for add datas, and alter name anythings html for more understand to users

--- a/delivery/delivery/templates/items/register_items.html
+++ b/delivery/delivery/templates/items/register_items.html
@@ -24,8 +24,8 @@
         </div>
 
         <div class="form-group">
-            <label>Nome</label>
-            {{ form.name(class="form-control", placeholder="Nome") }}
+            <label>Nome do menu</label>
+            {{ form.name(class="form-control", placeholder="Nome do menu") }}
             {% if form.errors.name %}
             <div class="alert alert-danger" role="alert">
                 <ul>
