--- a/delivery/delivery/templates/store/register_store.html
+++ b/delivery/delivery/templates/store/register_store.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            <label>Nome </label>
+            <label>Nome do Estabelecimento</label>
             {{ form.name_store(class="form-control", placeholder="Nome do Estabelecimento") }}
             {% if form.errors.name %}
             <div class="alert alert-danger" role="alert">
