--- a/delivery/delivery/templates/category/list_category.html
+++ b/delivery/delivery/templates/category/list_category.html
@@ -30,7 +30,7 @@
             <td>{{category.on_menu}}</td>
             <td>
                 <a href="{{url_for('cate.edit_category')}}">Editar</a>
-                <a href="{{url_for('cate.delete_category')}}">Deletar</a>
+                <a href="{{url_for('cate.delete_category', id=category.id)}}">Deletar</a>
             </td>
 
         </tr>
