--- a/delivery/delivery/templates/items/list_items.html
+++ b/delivery/delivery/templates/items/list_items.html
@@ -34,7 +34,7 @@
             <td>{{items.available}}</td>
             <td>
                 <a href="{{url_for('cate.edit_items')}}">Editar</a>
-                <a href="{{url_for('cate.delete_items')}}">Deletar</a>
+                <a href="{{url_for('cate.delete_items', id=items.id)}}">Deletar</a>
             </td>
 
         </tr>
