Resolved issue with botton (Voltar) in screen from register datas

--- a/delivery/delivery/templates/category/list_category.html
+++ b/delivery/delivery/templates/category/list_category.html
@@ -29,7 +29,7 @@
             <td>{{category.name}}</td>
             <td>{{category.on_menu}}</td>
             <td>
-                <a href="{{url_for('cate.edit_category')}}">Editar</a>
+                <a href="{{url_for('cate.edit_category', id=category.id)}}">Editar</a>
                 <a href="{{url_for('cate.delete_category', id=category.id)}}">Deletar</a>
             </td>
 
