--- a/delivery/delivery/templates/address/register_address.html
+++ b/delivery/delivery/templates/address/register_address.html
@@ -70,10 +70,12 @@
             {% endif %}
         </div>
 
-        <div class="control">
-            <input class="button is-link" type="submit" value="Cadastrar">
-            <button class="button is-link is-light"><a href="{{ url_for('cate.list_address')}}">Voltar</a></button>
+        <div class="form-group">
+            <input class="button is-link" type="submit" value="Cadastrar">          
         </div>
     </div>
 </form>
+<div class="col-md-3 col-md-offset-4">
+    <button class="button is-link is-light"><a href="{{ url_for('cate.list_address')}}">Voltar</a></button>
+</div>
 {% endblock %}
