--- a/delivery/delivery/templates/category/edit_category.html
+++ b/delivery/delivery/templates/category/edit_category.html
@@ -1,3 +1,59 @@
-<html>
-    <h1>A</h1>
-</html>
+{% extends "index.html" %}
+
+{% block top %}
+
+
+<section class="hero is-primary">
+    <div class="hero-body">
+        <div class="container">
+            <h1>Cadastro de Categoria<h1>
+        </div>
+    </div>
+</section>
+{% endblock %}
+
+{% block main %}
+<form action='{{url_for("cate.edit_category", id=category.id)}}' method='post' enctype='multipart/form-data'>
+    <div class="col-md-3 col-md-offset-4">
+
+        {{form.csrf_token}}
+
+        <div class="form-group">
+            <label>Nome</label>
+            {{ form.name(class="form-control", placeholder="Nome") }}
+            {% if form.errors.password %}
+            <div class="alert alert-danger" role="alert">
+                <ul>
+                    {% for e in form.errors.password %}
+                    <li>{{ e }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="form-group">
+            <label>No menu</label>
+            {{ form.on_menu(class="checkbox", type="checkbox") }}
+            {% if form.errors.available %}
+            <div class="alert alert-danger" role="alert">
+                <ul>
+                    {% for e in form.errors.available %}
+                    <li>{{ e }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="form-group">
+            <input class="button is-link" type="submit" value="Alterar">
+        </div>
+
+
+    </div>
+</form>
+<div class="col-md-3 col-md-offset-4">
+    <button class="button is-link is-light"><a href="{{ url_for('cate.list_category')}}">Voltar</a></button>
+</div>
+{% endblock %}
