--- a/delivery/delivery/templates/category/register_category.html
+++ b/delivery/delivery/templates/category/register_category.html
@@ -46,14 +46,16 @@
         {% endif %}
     </div>
 
-    <div class="control">
+    <div class="form-group">
         <input class="button is-link" type="submit" value="Cadastrar">
-        <button class="button is-link is-light"><a href="{{ url_for('cate.list_category')}}">Voltar</a></button>
     </div>
 
 
 </div>
-</form>    
+</form>
+<div class="col-md-3 col-md-offset-4">
+    <button class="button is-link is-light"><a href="{{ url_for('cate.list_category')}}">Voltar</a></button>
+</div>
 {% endblock %}
 
 
