--- a/delivery/delivery/templates/items/register_items.html
+++ b/delivery/delivery/templates/items/register_items.html
@@ -89,12 +89,14 @@
         </div>
 
 
-        <div class="control">
+        <div class="form-group">
             <input class="button is-link" type="submit" value="Cadastrar">
-            <button class="button is-link is-light"><a href="{{ url_for('cate.list_items')}}">Voltar</a></button>
         </div>
 
 
     </div>
 </form>
+<div class="col-md-3 col-md-offset-4">
+    <button class="button is-link is-light"><a href="{{ url_for('cate.list_items')}}">Voltar</a></button>
+</div>
 {% endblock %}
