--- a/delivery/delivery/templates/order_items/register_order_items.html
+++ b/delivery/delivery/templates/order_items/register_order_items.html
@@ -43,14 +43,16 @@
     </div>
     
     
-    <div class="control">
+    <div class="form-group">
         <input class="button is-link" type="submit" value="Cadastrar">
-        <button class="button is-link is-light"><a href="{{ url_for('cate.list_order_items')}}">Voltar</a></button>
     </div>
 
 
 </div>
-</form>    
+</form>
+<div class="col-md-3 col-md-offset-4">
+    <button class="button is-link is-light"><a href="{{ url_for('cate.list_order_items')}}">Voltar</a></button>
+</div>
 {% endblock %}
 
 
