--- a/delivery/delivery/templates/store/register_store.html
+++ b/delivery/delivery/templates/store/register_store.html
@@ -51,12 +51,14 @@
             {% endif %}
         </div>
 
-        <div class="control">
+        <div class="form-group">
             <input class="button is-link" type="submit" value="Cadastrar">
-            <button class="button is-link is-light"><a href="{{ url_for('cate.list_store')}}">Voltar</a></button>
         </div>
 
 
     </div>
 </form>
+<div class="col-md-3 col-md-offset-4">
+    <button class="button is-link is-light"><a href="{{ url_for('cate.list_store')}}">Voltar</a></button>
+</div>
 {% endblock %}
